Fix scroll overflow issue

--- a/src/components/MortgageCalculator/MortgageCalculator.css
+++ b/src/components/MortgageCalculator/MortgageCalculator.css
@@ -17,6 +17,7 @@
     .mortgage-calculator {
         width: calc(100dvw - 40px);
         grid-template-columns: 1fr;
+        margin: 4rem 0;
     }    
 }
 
@@ -28,6 +29,5 @@
         grid-template-columns: 1fr;
         grid-auto-rows: auto;
         align-content: start;
-        overflow-y: auto;
     }
 }
